fix: prevent order status wrapping

--- a/src/styles/components/_orderstatus.scss
+++ b/src/styles/components/_orderstatus.scss
@@ -35,4 +35,9 @@
       }
     }
   }
+
+  .status-icon {
+    // prevent wrap of text
+    text-wrap: nowrap;
+  }
 }
